package com.bbz.sanguo.net.protobuf;

import "User.proto";
import "Mission.proto";

// How to generate
// ===============
// $ cd example
// $ protoc src/main/java/io/netty/example/worldclock/WorldClockProtocol.proto \
//          --java_out=src/main/java
//
// Add @SuppressWarnings("all") to the generated code not to pollute IDE task list.

option optimize_for = SPEED;


enum MSG {
    Login = 100;

    /**
    * 玩家注册
    */
    Register    = 101;
    /**
    * 检测昵称是否重复
    */
    NickNameCheck = 102;

    /**
    * 查看闯关信息
    */
    MissionShow = 200;

}


message Request {
    required MSG type = 1;
    required int32 sequence = 2;

    optional LoginRequest login = 3;
    optional MissionShowRequest missionShow = 4;
    optional NickNameCheckRequest nickNameCheck = 5;
    optional RegisterRequest register = 6;
}

message Response {
    required MSG                                type = 1;
    required int32                              sequence = 2;
    required int32                              resultCode = 3 [default = 0];//结果指示，0为成功，其他为各种错误码
    optional string                             error_description = 4;//可选，如果有些错误不能从配置文件中获取，则在此描述
    //required bool last_block = 3;


    optional LoginResponse                      login = 5;
    optional MissionShowResponse                missionShow = 6;
    optional NickNameCheckResponse              nickNameCheck = 7;
    optional RegisterResponse                   register = 8;
}


//message EntityRequest
//{
//    required Entity id = 1;
//}
//message EntityResponse
//{
//    required EntityData content = 1;
//}
//
//message AppendEntityRequest
//{
//    required EntityData content = 1;
//}
//message AppendEntityResponse
//{
//    required EntityData id = 1;
//}
//message ModifyEntityRequest
//{
//    required EntityData content = 1;
//}
//message ModifyEntityResponse
//{
//    required EntityData content = 1;
//}
//
//message DeleteEntityRequest
//{
//    required Entity id = 1;
//}
//message DeleteEntityResponse
//{
//    required EntityData content = 1;
//}
//
//
//message SnmpRequest
//{
//    optional bool set = 1 ;
//    optional bool get = 2 ;
//    optional Entity   id = 3;
//    optional SnmpGroups  content = 4;
//
//}
//
//message SnmpResponse
//{
//    optional Entity  id = 1;
//    optional SnmpGroups  content = 2;
//
//}
//
//message MoveZoneRequest
//{
//    required Entity id = 1;
//    required Entity new_zone = 2;
//}
//message MoveZoneResponse
//{
//    required Entity id = 1;
//    required Entity old_zone = 2;
//}
//
//message ModifyKeepliveRequest
//{
//    required Entity id = 1;
//    required sfixed32 time_to_live = 2;
//}
//
//enum EntityIndicationType
//{
//    APPEND = 0;
//    UPDATE = 1;
//    DELETE_ = 2;
//}
//message EntityIndication
//{
//
//    required EntityIndicationType type = 1;
//    required EntityData content = 2;
//}
//
//message MoveZoneIndication
//{
//    required Entity id = 1;
//    required Entity old_zone = 2;
//}
/*
message Command
{

}
*/
//message SnmpIndication
//{
//    required Entity id = 1;
//    required SnmpTrapEvent trap_event = 2;
//
//
//}
//message Indication
//{
//    optional EntityIndication entity = 1;
//    optional SnmpIndication   snmp   =2;
//    optional TraceIndication  trace  = 3;
//    optional MoveZoneIndication  move_zone = 4;
//}


//
//message Message {
//    required MSG type = 1;
//    required int32 sequence = 2;
//    optional Request request = 3;
//    optional Response response = 4;
//    //optional Command  command = 5;
//    //optional Indication indication = 6;
//
//}
//message EntityData
//{
//    optional Terminal terminal = 1;
//    optional Zone     zone = 2;
//    optional User     user = 3;
//}
//
//message TraceLevel
//{
//    optional bool error = 1;
//    optional bool warning = 2;
//    optional bool info    = 3;
//    optional bool debug   = 4;
//    optional bool trace   = 5;
//}
//message SetTraceRequest
//{
//    optional TraceLevel trace_level = 1;
//    optional bool       log_to_client = 2;
//
//}
//message SetTraceResponse
//{
//    optional TraceLevel trace_level = 1;
//    optional bool       log_to_client = 2;
//}
//
//message GetTraceResponse
//{
//    optional TraceLevel trace_level = 1;
//    optional bool       log_to_client = 2;
//}
//message TraceIndication
//{
//    required bytes log_record = 1;
//}