package com.bbz.sanguo.net.protobuf;

// How to generate
// ===============
// $ cd example
// $ protoc src/main/java/io/netty/example/worldclock/WorldClockProtocol.proto \
//          --java_out=src/main/java
//
// Add @SuppressWarnings("all") to the generated code not to pollute IDE task list.

option optimize_for = SPEED;


message RegisterRequest {
    required string userName = 1;
    required string password = 2;
    required string mobile = 3;
}

message RegisterResponse {
    required int32 ret = 1;
}


message LoginRequest {
    required string userName = 1;
    required string password = 2;
}

message LoginResponse {
    optional int32 ret = 6;
}

message NickNameCheckRequest {
    required string nickName = 1; //昵称
}

message NickNameCheckResponse {
    required bool isDuplicate = 1; //昵称是否重复
}

